deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coursecatalogue
  labels:
    run: coursecatalogue
spec:
  selector:
    matchLabels:
      run: coursecatalogue
  replicas: 1
  template:
    metadata:
      labels:
        run: coursecatalogue
        app: coursecatalogue
    spec:
      containers:
      - name: coursecatalogue
        image: coursecatalogue2.azurecr.io/tai-coursecatalogue:0.1.0
        resources:
          requests:
            cpu: "400m"
            memory: "500Mi"
          limits:
            cpu: "750m"
            memory: "1Gi"
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
        imagePullPolicy: Always
