deployment/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: coursecatalogue
  labels:
    app: coursecatalogue
spec:
  containers:
    - name: coursecatalogue
      image: coursecatalogue.azurecr.io/tai-coursecatalogue:0.0.1
      resources:
        requests:
          cpu: "400m"
          memory: "500Mi"
        limits:
          cpu: "750m"
          memory: "1Gi"
      ports:
        - containerPort: 80
          name: http
          protocol: TCP
      imagePullPolicy: Always
