deployment/ingress-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: coursecatalogue-ip
spec:
  selector:
    app.kubernetes.io/name: coursecatalogue  # This should match the label of your Flask app pod
  ports:
    - protocol: TCP
      port: 80       # Port accessible outside the cluster
      targetPort: 80  # Port your Flask app is listening on inside the pod
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coursecatalogue-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: coursecatalogue.tilburgai.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coursecatalogue-ip
                port:
                  number: 80
